--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 
 
 
-
+spring.jmx.enabled=false
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:file:./data/partfileDB
 spring.datasource.driverClassName=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
-server.port=8081
+
+org.springframework.boot.test.context.SpringBootTestContextBootstrapper=true
