hibernate query annotations fixed with native query

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
+server.port=8080
 
 
 org.springframework.boot.test.context.SpringBootTestContextBootstrapper=true
